<resources>
    <string name="app_name">TennisScoreboard</string>
    <string name="Title"> Tennis Scoreboard </string>
    <string name="CurrentSet">Current Set </string>
    <string name="previous">Previous Set</string>
    <string name="Set">Set</string>
    <string name="Game">Games</string>
    <string name="points1">Points</string>
    <string name="points2">Points (-)</string>
    <string name="Ace">Ace</string>
    <string name="Fault">Fault</string>
    <string name="Unfor">Unforced</string>
    <string name="v">V</string>
    <string name="Player">Player</string>
    <string name="Player1">Player1</string>
    <string name="Player2">Player2</string>
    <string name="Player11">Enter_Player1</string>
    <string name="Player22">Enter_Player2</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="empty">-</string>
    <string name="crown">Rolex Logo</string>
    <string name="reset">Reset</string>
    <string name="newgame">New Game</string>
    <string name="playerstats">PLAYER STATISTIC</string>
    <string name="back">Back</string>
    <string name="new_game"><font size="30"><b> "Enter Player Name (optional) and click New Game." </b></font></string>
    <string name="p1_won"><font size="30"><b> "Player 1 Won." </b></font></string>
    <string name="p2_won"><font size="30"><b> "Player 2 Won." </b></font></string>
    <string name="setswon">Sets Won</string>
    <string name="gameswon">Games Won</string>
    <string name="entername">Enter Players Names :</string>
    <string name="text">and / or press Ok.</string>
    <string name="ok">OK</string>

</resources>
