<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tennisscoreboard.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@color/background"
        android:padding="10dp">

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entername"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input1"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/heading"
            android:layout_marginTop="25dp"
            android:hint="@string/Player11" />

        <EditText
            android:id="@+id/input2"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/input1"
            android:layout_marginTop="20dp"
            android:hint="@string/Player22" />

        <TextView
            android:id="@+id/heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/input2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/text"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/action_ok"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_corners1"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </RelativeLayout>


</RelativeLayout>